# fixi

./: .gitignore  CMakeLists.txt  README.md  binop.hpp  error.cpp  error.hpp  fixi.cpp  interpreter.cpp  interpreter.hpp  jopl.cpp  lookup.cpp  parser.hpp  state.cpp  state.hpp  token.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp
src/: assign.cpp  assign.hpp  binop.hpp  interpreter.hpp  lookup.hpp  stack.cpp  stack.hpp  state.hpp  token.cpp  token.hpp
